Looking over a range of q's...